--- a/ConfigurationService/src/main/resources/application.yml
+++ b/ConfigurationService/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Configuration Service
+    name: ConfigurationService
   cloud:
     config:
       server:
@@ -14,4 +14,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-service:8761/eureka
