--- a/UserManagementService/src/main/resources/application.yml
+++ b/UserManagementService/src/main/resources/application.yml
@@ -3,10 +3,12 @@ spring:
     name: UserManagementService
 
   datasource:
-    url: jdbc:postgresql://users-db:5431/users
+    url: jdbc:postgresql://users-db:5432/users
     username: users
     password: users
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 30000
 
   jpa:
     hibernate:
@@ -18,4 +20,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-service:8761/eureka
