--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   users-db:
     image: postgres:12
@@ -8,32 +6,93 @@ services:
       POSTGRES_USER: users
       POSTGRES_PASSWORD: users
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U urls -d urls"]
+      test: ["CMD-SHELL", "pg_isready -U users -d users"]
       interval: 5s
       timeout: 5s
       retries: 10
     ports:
-      - "5431:5431"
+      - "5431:5432"
+    networks:
+      - bm-network
+
+  auth-db:
+    image: postgres:12
+    environment:
+      POSTGRES_DB: auth
+      POSTGRES_USER: auth
+      POSTGRES_PASSWORD: auth
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U auth -d auth" ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    ports:
+      - "5432:5432"
     networks:
       - bm-network
 
   discovery-service:
     build: ./ServiceDiscovery
     ports:
-      - ":"
+      - "8761:8761"
+    networks:
+      - bm-network
+
+  config-service:
+    build: ./ConfigurationService
+    ports:
+      - "8888:8888"
+    depends_on:
+      discovery-service:
+        condition: service_started
+    networks:
+      - bm-network
+
+  api-gateway:
+    build: ./APIGateway
+    ports:
+      - "8000:8000"
+    depends_on:
+      discovery-service:
+        condition: service_started
+      auth-service:
+        condition: service_started
+    networks:
+      - bm-network
+
+  auth-service:
+    build: ./AuthService
+    ports:
+      - "8081:8081"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://auth-db:5432/auth
+      SPRING_DATASOURCE_USERNAME: auth
+      SPRING_DATASOURCE_PASSWORD: auth
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    depends_on:
+      auth-db:
+        condition: service_healthy
+      discovery-service:
+        condition: service_started
+      user-management-service:
+        condition: service_started
+    networks:
+      - bm-network
 
   user-management-service:
     build: ./UserManagementService
     ports:
       - "8001:8001"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://users-db:5431/users
+      SPRING_DATASOURCE_URL: jdbc:postgresql://users-db:5432/users
       SPRING_DATASOURCE_USERNAME: users
       SPRING_DATASOURCE_PASSWORD: users
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
     depends_on:
-      urls-db:
+      users-db:
         condition: service_healthy
+      discovery-service:
+        condition: service_started
     networks:
       - bm-network
 
